@@ -42,6 +42,9 @@ Core and Builtins
 - Issue #24268: PEP 489: Multi-phase extension module initialization.
   Patch by Petr Viktorin.
 
+- Issue #23359: Optimize set object internals by specializing the
+  hash table search into a lookup function and an insert function.
+
 - Issue #23955: Add pyvenv.cfg option to suppress registry/environment
   lookup for generating sys.path on Windows.
 
